add union and intersect buttons

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,5 +8,6 @@ html
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js')
         script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js')
         script(src='https://unpkg.com/leaflet@1.2.0/dist/leaflet.js')
+        script(src='https://npmcdn.com/@turf/turf/turf.min.js')
     body
         block content  
