--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,5 +9,6 @@ html
         script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js')
         script(src='https://unpkg.com/leaflet@1.2.0/dist/leaflet.js')
         script(src='https://npmcdn.com/@turf/turf/turf.min.js')
+        script(src='../loadData.js')
     body
         block content  
