fix CSS and console outputs

--- a/views/map.pug
+++ b/views/map.pug
@@ -183,7 +183,7 @@ block content
         //-     console.log(map);
         //-     if (map.hasLayer(feature)) {
         //-         map.removeLayer(feature, function() {
-        //-             console.log("successfully hid " + feature);
+        //-             console.log("Successfully hid " + feature);
         //-         });
         //-     }
         //- }
